assets/css/style.css
@import url('https://fonts.googleapis.com/css2?family=Alegreya:ital,wght@0,400..900;1,400..900&a&display=swap');

* {
    margin: 0;
    padding: 0;
    border: 0;
}

body {
    font-family: "Alegreya",sans-serif;
    min-width: 360px;
}

.section-heading {
    font-size: 48px;
    letter-spacing: 8px;
    padding: 40px 0 0 0;
}

.container {
    margin-top: 40px;
    border-radius: 5px;
}

.call-to-action {
    font-weight: 500;
    font-size: 24px;
    margin-bottom: 75px;
    color: #000;
}


/* Header */

.header-main {
    background-image: url('../images/viper-cover.webp');
    position: relative;
    min-width: 400px;
    width: 100%;
    height: 100vh;
    background-size: cover;
    background-position: center;
}

#top-bar {
    list-style-type: none;
    padding: 15px;
}

#social-icons a {
    color: #fff;
}

#social-icons a:hover {
    color: #eeeeee;
}

#header-logo a {
    margin: 0 auto;
    display: inline-block;
}

#header-menu {
    margin-top: 20px;
}

#header-menu a {
    color: #fff;
    font-size: 24px;
    padding: 0 0 5px 0;
    margin: 30px;
}

#header-menu a:hover {
    text-decoration: none;
    color: #eeeeee;
    border-bottom: 2px solid #eeeeee;
}

.header-call-to-action {
    font-weight: 500;
    font-size: 24px;
    position: relative;
    top: 220px;
}


/* Tour */

.table-striped tbody tr:nth-of-type(odd) {
    background-color: #343a40;
}


/* News */

#news {
    margin: 50px auto 0 auto;
}

.news-item img {
    border-radius: 10px;
    height: 250px;
    margin-bottom: 10px;
}


/* Music */

.music-item img {
    width: 100%;
    border-radius: 5px;
}

.music-item a {
    font-size: 20px;
    color: #000;
}

.music-item a:hover {
    text-decoration: none;
}

.listen-now:hover {
    color: #6f279c;
}

/* Footer */

footer {
    padding: 20px 0 0 0;
}

.footer-socials {
    margin-bottom: 0px;
}

.footer-socials a:hover {
    color: #eeeeee;
}

.copyright-and-legal {
    width: 45%;
    margin: 0 auto;
}

.copyright {
    padding: 0 0 20px 0;
    margin: 0;
    text-align: center;
    font-size: 12px;
    width: 50%;
    float: left;
}

.legal-pages {
    padding: 0 0 20px 0;
    margin: 0;
    text-align: center;
    font-size: 12px;
    width: 50%;
    float: right;
}

.legal-pages a,
.footer-socials a {
    color: #000;
}

.legal-pages a:hover {
    text-decoration: none;
    color: #6f279c;
}

